<resources>
    <string name="app_name">My Github User</string>
    <string name="favorites_page">favorites page</string>
    <string name="settings_page">settings page</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="share_button">Share Button</string>
    <string name="followings">Followings</string>
    <string name="number_follower">0</string>
    <string name="number_following">0</string>
    <string name="settings">Settings</string>
    <string name="searchbar_hint">Search User</string>
    <string name="username_user">Username User</string>
    <string name="user_repo">https://www.github.com/</string>
    <string name="name">name</string>
    <string name="username">Username</string>
    <string name="logo_splash">Logo Splash</string>
    <string name="home">home</string>
    <string name="favorites">favorites</string>
    <string name="followers">Followers</string>
    <string name="detail">Searching for GitHub users is now faster and easier!</string>
    <string name="userNone">User tidak ditemukan, harap mencoba lagi..</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
    </string>
</resources>